# Karakuri

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  chassis_config.yaml  kinematics_model.urdf  pyproject.toml  utilities_control.json
.github/: repo-description.txt
.github/workflows/: ci.yml
Downloads-Setup/: COPY-PASTE.txt  Create-Folder.bat  GIT-BASH.txt  Setup-Karakuri.ps1
core/: MANIFEST.md  integrity.snapshot  permissions.yaml
database/migrations/: 001_hardened_schema.sql  README.md
docs/: ADVANCED-STACK.md  ARCHITECTURE.md  ASSEMBLY.md  CORPORATE-ROBOTICS-BUILD.md  DATABASE-HARDENING.md  ESTOP-PROOF.md  FUSION.md  GAPS-AND-ENHANCEMENTS.md  GETTING-STARTED.md  GITHUB-REPO-SETTINGS.md  GITHUB.md  HARDWARE-BLUEPRINT.md  HOME-CLOTHES.md  HUMANOID.md  MOBILE-BASE.md  NAMES.md  RECOGNITION-AND-RELAX.md  ROADMAP.md  ROBOT-MISSION.md  SETUP-GIT.md  SKILLS-AND-AUTONOMY.md  SUPPLIES.md  WINDOWS.md
firmware/motor_safety_controller/: README.md  platformio.ini
firmware/motor_safety_controller/src/: main.cpp
karakuri/: __init__.py  __main__.py  audit.py  cli.py  paths.py  permissions.py  settings.py  stop.py  watchdog.py
karakuri/database/: __init__.py  cloud.py  evidence.py  spec.py  sqlite.py
karakuri/defaults/: __init__.py
karakuri/hardware/: __init__.py  battery.py  bms.py  drivetrain.py  hal.py  interfaces.py  mock.py  pi.py  teleop.py
karakuri/memory/: __init__.py  failures.py  trust.py
karakuri/mutable/: __init__.py  runner.py
karakuri/promotion/: __init__.py  generator.py  promote.py  sandbox.py  tester.py
karakuri/research/: __init__.py  extract.py  fetcher.py  queue.py  ratelimit.py  searx.py  web.py  worker.py
karakuri/robot/: __init__.py  arm.py  autonomy.py  balance.py  behavior.py  bus.py  calibration.py  cliff.py  config.py  coverage.py  coverage_plan.py  detections.py  docking.py  encoders.py  gait.py  grip.py  humanoid.py  imu.py  mapping.py  pdb.py  people.py  planner.py  reasoner.py  relax.py  reorder.py  rt.py  safety.py  schema.py  skills.py  supplies.py  touch.py  validate.py  wardrobe.py
mutable/templates/: example_playbook.yaml  test_example_playbook.py
robot/ashi/: README.md  mobility.yaml
robot/blueprints/: README.md  wiring.md
robot/bom/: karakuri_bom.yaml
robot/calibration/: example_calibration.json
robot/hane/: README.md  vacuum_plan.yaml
robot/karada/: body.yaml
robot/musubi/: README.md  pick_plan.yaml
robot/shikai/: README.md  config.yaml
robot/ws/: .gitkeep
robot/ws/src/karakuri_bringup/: package.xml  setup.py
robot/ws/src/karakuri_bringup/config/: controllers.yaml
robot/ws/src/karakuri_bringup/karakuri_bringup/: __init__.py
robot/ws/src/karakuri_bringup/launch/: hardware.launch.py  simulation.launch.py
robot/ws/src/karakuri_description/: CMakeLists.txt  package.xml
robot/ws/src/karakuri_description/launch/: description.launch.py
robot/ws/src/karakuri_description/urdf/: karakuri.urdf.xacro
robot/ws/src/karakuri_diagnostics/: package.xml  setup.py
robot/ws/src/karakuri_diagnostics/config/: diagnostics.yaml
robot/ws/src/karakuri_diagnostics/karakuri_diagnostics/: __init__.py
scripts/: first-push.ps1  install-windows.ps1  install-wsl.sh  validate_stl.py  verify_non_editable_install.py  verify_system_integrity.py
scripts/vision/: capture_frames.py  train_yolo.py
slicer/: ender3v3_cf_nylon.ini  ender3v3_petg.ini  ender3v3_tpu.ini
tests/: test_arm.py  test_balance_imu.py  test_behavior_pdb_touch.py  test_bms_calibration.py  test_bus_rt_encoders.py  test_cli.py  test_cliff.py  test_core.py  test_coverage_behavior.py  test_database.py  test_detections.py  test_docking.py  test_error_paths.py  test_extract.py  test_failures.py  test_gait.py  test_grip_reasoner.py  test_hal_generator.py  test_humanoid.py  test_mapping.py  test_people_relax.py  test_planner.py  test_promotion.py  test_ratelimit.py  test_research.py  test_robot_build_assets.py  test_robot_config.py  test_safety.py  test_schema.py  test_settings.py  test_skills_autonomy.py  test_supplies_reorder.py  test_trust.py  test_validate.py  test_wardrobe.py
(+82 files in other folders)
