[project]
name = "karakuri"
version = "0.1.0"
description = "KARAKURI fusion stack: sovereign self-adapting floor robot (Windows + Ubuntu)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["robotics", "ros2", "autonomous", "ubuntu", "karakuri"]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
research = ["beautifulsoup4>=4.12.0", "lxml>=5.0.0"]

[project.scripts]
karakuri = "karakuri.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["karakuri*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
