[project]
name = "karakuri"
version = "0.8.2"
description = "KARAKURI fusion stack: sovereign self-adapting floor robot (Windows + Ubuntu)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["robotics", "ros2", "autonomous", "ubuntu", "karakuri", "yolo", "manipulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/RamenAnime/Karakuri"
Repository = "https://github.com/RamenAnime/Karakuri"
Issues = "https://github.com/RamenAnime/Karakuri/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0"]
research = ["beautifulsoup4>=4.12.0", "lxml>=5.0.0"]

[project.scripts]
karakuri = "karakuri.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["karakuri*"]

[tool.setuptools.package-data]
"karakuri.defaults" = ["core/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["SIM108"]

[tool.coverage.run]
source = ["karakuri"]
omit = ["karakuri/__main__.py"]
