<?xml version="1.0"?>
<package format="3">
  <name>karakuri_description</name>
  <version>0.8.2</version>
  <description>KARAKURI robot description, meshes, and xacro model.</description>
  <maintainer email="maintainer@example.com">KARAKURI Maintainers</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
